Criando lock para executar transacoes concorrentes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=caju-transaction-authorizer
+spring.profiles.active=prod
 
 # -- Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/caju-transaction-authorizer-db?serverTimezone=TimeZone&useLegacyDatetimeCode=false
