Criando massas de teste

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # Run schema sql
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
 # Set to true to use Virtual Threads
 spring.threads.virtual.enabled=true
