--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -7,7 +7,4 @@ spring.datasource.password=sa
 spring.jpa.database=H2
 
 # Run schema sql
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.schema=classpath:schema.sql
-spring.jpa.show-sql=true
+spring.sql.init.mode=never
