--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=caju-transaction-authorizer
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 # -- Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/caju-transaction-authorizer-db?serverTimezone=TimeZone&useLegacyDatetimeCode=false
