--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   db:
-    image: postgres
+    image: postgres:12.19
     environment:
       POSTGRES_PASSWORD: 123456
       POSTGRES_USER: postgres
