--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:caju-transaction-authorizer-db
 spring.datasource.username=sa
 spring.datasource.password=sa
+spring.h2.console.enabled=true
 
 # -- jpa
 spring.jpa.database=H2
